mdapipkg/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>KGRenewal__BillingStreetAddressLine1__c</fullName>
        <label>Billing Street Address (Line 1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__BillingStreetAddressLine2__c</fullName>
        <label>Billing Street Address (Line 2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ContractEffectiveDate__c</fullName>
        <description>The date that the order becomes effective.</description>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ContractEndDate__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KGRenewal__CreateNewSubscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will create a new subscription for this opportunity. If unchecked and the Account has one existing subscription, then Encore will fill out the subscription field with the existing subscription.  If unchecked and the Account has multiple existing subscriptions, then the user must fill out the subscription field with an existing subscription.</description>
        <inlineHelpText>Checking this box will create a new subscription for this opportunity. If unchecked, the opportunity will either be assigned to the existing subscription, or the user must choose a subscription associated with the account.</inlineHelpText>
        <label>Create New Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__EnablePricebook2Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, products on this Opportunity will be priced using the hierarchy.</description>
        <label>Enable Price Book Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__IsActiveCart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__IsPriceTermLocked__c</fullName>
        <formula>NOT(AND(ISBLANK(KGRenewal__LockedPricingEndDate__c),ISBLANK(KGRenewal__LockedPriceTerm__c)))</formula>
        <inlineHelpText>If true, changing the Opportunity Term will not change the pricing of the Opportunity Products. The renewal will still begin one day after the Contract End Date.</inlineHelpText>
        <label>Pricing Locked To End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__LockedPriceTerm__c</fullName>
        <description>When Locked Price Term has a value, pricing will be based on Locked Price Term instead of Term.</description>
        <label>Locked Price Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KGRenewal__LockedPricingEndDate__c</fullName>
        <description>Field is deprecated. This field is replaced by Locked Price Term.</description>
        <label>Locked Pricing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KGRenewal__OverrideTaxTables__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tax rate will be manually entered.</description>
        <label>Override Tax Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__PaymentCard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Card</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>KGRenewal__PaymentCard__c.KGRenewal__Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>KGRenewal__PaymentCard__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KGRenewal__PaymentVerificationToken__c</fullName>
        <label>Payment Verification Token</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>KGRenewal__PoNumber__c</fullName>
        <description>Number identifying the purchase order.</description>
        <inlineHelpText>Number identifying the purchase order.</inlineHelpText>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__PreviousSale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Sale</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>PreviousOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KGRenewal__RevenueType__c</fullName>
        <description>The type of revenue generated from this Opportunity</description>
        <formula>IF(
   ISBLANK(KGRenewal__PreviousSale__c),
   IF(
      OR(
         ISBLANK(KGRenewal__Subscription__c),
         KGRenewal__Subscription__r.KGRenewal__StartDate__c = KGRenewal__ContractEffectiveDate__c
      ),
      &quot;Net new&quot;,
      &quot;Add-on&quot;
   ),
   &quot;Renewal&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingCity__c</fullName>
        <label>Shipping City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingCountry__c</fullName>
        <label>Shipping Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingFirstName__c</fullName>
        <label>Shipping First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingLastName__c</fullName>
        <label>Shipping Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingMethod__c</fullName>
        <label>Shipping Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingOrganization__c</fullName>
        <label>Shipping Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingPostalCode__c</fullName>
        <label>Shipping Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingState__c</fullName>
        <label>Shipping State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingStreetAddressLine1__c</fullName>
        <label>Shipping Street Address (Line 1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingStreetAddressLine2__c</fullName>
        <label>Shipping Street Address (Line 2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__Shipping__c</fullName>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KGRenewal__SubmitApprovalComments__c</fullName>
        <label>Submit Approval Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KGRenewal__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>KGRenewal__Subscription__c.KGRenewal__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>You are viewing Subscriptions on this Opportunity&apos;s Account.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>KGRenewal__Subscription__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KGRenewal__SuppressEncore__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this checkbox is set to true, none of the Encore fields will be updated on the Opportunity or its Opportunity Products. When the Opportunity is closed, the Opportunity will not generate a renewal Opportunity, Subscription, or Invoice.</description>
        <inlineHelpText>When this checkbox is set to true, none of the Encore fields will be updated on the Opportunity or its Opportunity Products. When the Opportunity is closed, the Opportunity will not generate a renewal Opportunity, Subscription, or Invoice.</inlineHelpText>
        <label>Suppress Encore Functionality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__SyncingRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this field is checked, Encore may add co-termed opportunity products or update opportunity product pricing as necessary.</inlineHelpText>
        <label>Allow Background Price Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__TaxRate__c</fullName>
        <label>Tax Rate</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KGRenewal__TaxUpdateStatus__c</fullName>
        <description>The status of tax calculations for this Opportunity. If the tax is calculating, please refresh the page to check for an update.</description>
        <inlineHelpText>The status of tax calculations for this Opportunity. If the tax is calculating, please refresh the page to check for an update.</inlineHelpText>
        <label>Tax Update Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KGRenewal__TermInDays__c</fullName>
        <label>Term (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KGRenewal__Term__c</fullName>
        <label>Term (in months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KGRenewal__eCheckType__c</fullName>
        <label>eCheck Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CCD - Cash Concentration or Disbursement</fullName>
                </value>
                <value>
                    <fullName>PPD - Prearranged Payment and Deposit Entry</fullName>
                </value>
                <value>
                    <fullName>TEL - Telephone-Initiated Entry</fullName>
                </value>
                <value>
                    <fullName>WEB - Internet-initiated Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Opportunity_Name__c</fullName>
        <label>Lead Opportunity Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Oppty_Name_Long__c</fullName>
        <description>This is used for autopopulated the Lead Opportunity Name Field</description>
        <label>Lead Oppty Name Long</label>
        <length>4100</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type_Name__c</fullName>
        <description>Brings over value from Lead on conversion</description>
        <label>Lead Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_Approval_Date__c</fullName>
        <description>For migration only</description>
        <label>MDM Approval Date (Historical)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDM_Rejection_Date__c</fullName>
        <description>Going forward use Opportunity Stage History out of the box functionality.</description>
        <label>MDM Rejection Date (Historical)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Chair_Approval_Date__c</fullName>
        <description>Migration only</description>
        <label>Membership Chair Approval Date (Hist)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Fiscal_Year_Date_Start__c</fullName>
        <formula>IF(AND(Record_Type_Name__c = &apos;Prospect&apos;, AND( MONTH(TODAY()) &gt;= 4, Month(TODAY()) &lt;= 6)), Date(Year(Fiscal_Date_Start__c)+2,07,01), Date(Year(Fiscal_Date_Start__c)+1,07,01))</formula>
        <label>Next Fiscal Year Date Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes_to_New_RML__c</fullName>
        <label>Notes to New RML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees__c</fullName>
        <label>No. of Employees (directly supervise)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Directly_Supervise__c</fullName>
        <label>Number Directly Supervise</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Officer_Comments__c</fullName>
        <label>Officer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opp_Title_Formula__c</fullName>
        <description>This field is being used within the 3rd party certification docusign template on the Opportunity. CMT 0001</description>
        <formula>IF( 
ISPICKVAL(Title__c , &quot;Other&quot;), Title_Other__c , TEXT(Title__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Title Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Health__c</fullName>
        <description>This field shows the Opportunity status. On the basis of value in this field &apos;Stoplight Signal&apos; displays value.</description>
        <label>Opportunity Health</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <label>Corporation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agency-type</fullName>
                </value>
                <value>
                    <fullName>Financial Institution</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Parent Account)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Company__c</fullName>
        <label>Parent Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Check Bounced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>President_Type__c</fullName>
        <label>President Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entrepreneur</fullName>
                </value>
                <value>
                    <fullName>Professional Manager</fullName>
                </value>
                <value>
                    <fullName>Family Business Operator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profile_Page_Status_Exchange__c</fullName>
        <label>​Profile Page Status (Exchange)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profile_Status__c</fullName>
        <label>Profile Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProrateNumber__c</fullName>
        <formula>(KGRenewal__ContractEndDate__c -TODAY())/365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProrateNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Protech_Invoice_ID__c</fullName>
        <label>Protech Invoice ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pursue_Rejection_Reason_YPOI__c</fullName>
        <label>Pursue_Rejection_Reason (YPOI)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Does not meet local chapter quantitative criteria</fullName>
                </value>
                <value>
                    <fullName>Does not live within chapter geographic vicinity</fullName>
                </value>
                <value>
                    <fullName>Does not fit chapter&apos;s culture (language barrier, etc)</fullName>
                </value>
                <value>
                    <fullName>Does not meet chapter diversity goals (industry saturation, etc)</fullName>
                </value>
                <value>
                    <fullName>Does not meet YPO quantitative criteria; chapter will not pursue waiver</fullName>
                </value>
                <value>
                    <fullName>Conflict of interest with chapter member(s)</fullName>
                </value>
                <value>
                    <fullName>Lack of interest/commitment from prospect</fullName>
                </value>
                <value>
                    <fullName>Does not suit the YPO profile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q4_Date_Testing__c</fullName>
        <label>Q4 Consideration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QC_City__c</fullName>
        <description>Qualifying Company address City</description>
        <label>QC City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QC_CountryCode__c</fullName>
        <label>QC CountryCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_Country__c</fullName>
        <description>Qualifying Company Address Country</description>
        <label>QC Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QC_PostalCode__c</fullName>
        <description>Qualifying Company Address Postal Code</description>
        <label>QC PostalCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_StateCode__c</fullName>
        <label>QC StateCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_State__c</fullName>
        <description>Qualifying Company address State</description>
        <label>QC State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QC_StreetAddress1__c</fullName>
        <description>Qualifying Company Street line 1</description>
        <label>QC StreetAddress1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QC_StreetAddress2__c</fullName>
        <description>Qualifying Company Street address line 2</description>
        <label>QC_StreetAddress2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Qualifying_Company_Address__c</fullName>
        <description>Brings info from Account Object of Qualifying Company for DocuSign</description>
        <label>Qualifying Company Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Qualifying_Company__c</fullName>
        <description>This maps to Lead Organization__c. It allows for workflows etc. on the proposed Qualifying Company for the particular year.</description>
        <inlineHelpText>Name of the desired Qualifying Company for this opportunity.</inlineHelpText>
        <label>Qualifying Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Used in flow</description>
        <formula>RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Member__c</fullName>
        <label>Ref. Member</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_by_Chapter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Chapter</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.Record_Type_Name__c</field>
                <operation>equals</operation>
                <value>Chapter</value>
            </filterItems>
            <filterItems>
                <field>Account.Record_Type_Name__c</field>
                <operation>equals</operation>
                <value>Network</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region of opportunity</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Middle East / North Africa</fullName>
                </value>
                <value>
                    <fullName>Southeast US and Caribbean</fullName>
                </value>
                <value>
                    <fullName>North Asia</fullName>
                </value>
                <value>
                    <fullName>Southeast Asia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>South Asia</fullName>
                </value>
                <value>
                    <fullName>Australia / New Zealand</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Pacific US</fullName>
                </value>
                <value>
                    <fullName>Western US</fullName>
                </value>
                <value>
                    <fullName>Northeastern US</fullName>
                </value>
                <value>
                    <fullName>Central US</fullName>
                </value>
                <value>
                    <fullName>East Central US</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Does not live within chapter geographic vicinity</fullName>
                </value>
                <value>
                    <fullName>Does not meet YPO quantitative criteria; chapter will not pursue waiver</fullName>
                </value>
                <value>
                    <fullName>Does not meet local chapter quantitative criteria</fullName>
                </value>
                <value>
                    <fullName>Does not fit chapter&apos;s culture (language barrier, etc.)</fullName>
                </value>
                <value>
                    <fullName>Does not meet chapter diversity goals (industry saturation, etc.)</fullName>
                </value>
                <value>
                    <fullName>Lack of interest/committement from prospect</fullName>
                </value>
                <value>
                    <fullName>Does not suit the YPO profile</fullName>
                </value>
                <value>
                    <fullName>Lack of interest/commitment from prospect</fullName>
                </value>
                <value>
                    <fullName>Conflict of interest with chapter member(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remaining_Installments__c</fullName>
        <description>The number of remaining Lifetime Dues installments</description>
        <inlineHelpText>The number of remaining Lifetime Dues installments</inlineHelpText>
        <label>Remaining Installments</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SendQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_3rd_Party_Verification_Docusign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send 3rd Party Verification Docusign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stoplight_Status__c</fullName>
        <formula>IMAGE(
CASE(Opportunity_Health__c,
&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;Yellow&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;/s.gif&quot;),
&quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stoplight Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsidiary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subsidiary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Chapter_Name__c</fullName>
        <description>Used in flow to reset Opportunity products on transition.</description>
        <formula>Referred_by_Chapter__r.Name</formula>
        <label>Target Chapter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_DS3rd_Party_Verification_WF__c</fullName>
        <formula>HYPERLINK(&quot;https://composer.congamerge.com/?SessionId=&quot;
+  $Api.Session_ID + &quot;&amp;ServerURL=&quot; + $Api.Partner_Server_URL_290 + Conga_3rd_Party_Verification__c, &quot;Test DS 3rd Party Verification&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test DS3rd Party Verification WF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Address__c</fullName>
        <label>Third Party Address</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Third_Party_Approval__c</fullName>
        <label>Third Party Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party_City__c</fullName>
        <label>Third Party City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Comments__c</fullName>
        <label>Third Party Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Third_Party_Country_Code__c</fullName>
        <label>Third Party Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Country__c</fullName>
        <label>Third Party Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party_Document_Upload_Date_Histor__c</fullName>
        <label>Third Party Document Upload Date (Histor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Third_Party_Email__c</fullName>
        <label>Third Party Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Third_Party_Extension__c</fullName>
        <label>Third Party Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Firm_Website__c</fullName>
        <label>Third Party Firm Website</label>
        <type>Url</type>
    </fields>
</CustomObject>